LPS-80390 Fix document-library download link on IE11 and Safari

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
@@ -208,6 +208,12 @@ body .ddm-user-view-content {
 	}
 }
 
+.liferay-ddm-form-field-document-library {
+	a {
+		display: inline-block;
+	}
+}
+
 .radio-options {
 	.radio-inline {
 		span {
